welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:2: error: not found: value &&
	while (!estSurBiscuit())&&(!porteBiscuit()) {
                                ^Balin:8: error: value recule is not a member of Unit
possible cause: maybe a semicolon is missing before `value recule'?
	} recule()
          ^